<resources>
    <string name="app_name">BloodBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Carl Stanley</string>
    <string name="nav_header_subtitle">stanleymaina.edu38@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Custom related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_other_names">Other Names</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_sign_up">Register</string>
    <string name="action_dashboard">Dasboard</string>
    <string name="prompt_confirm_password">Confirm Password*</string>
    <string name="county_prompt">Choose a County</string>

    <!-- Strings related to login -->
    <string name="title_activity_register">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password*</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_collector">Collection Point</string>
    <string name="title_activity_donor">Donor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_user_list_fragment">Hello User List fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
